# cpt_super_learn

./: .gitignore  IDW.py  LICENSE  ReadMe.md  cases.json  config.yaml  create_gif.py  download_data.py  main.py  main_cpt.py  neural_RL.py  plot_loss.py  plot_score.py  plot_validation.py  requirement.txt  requirements.txt  rewards.py  rf_pytorch.py  rf_pytorch_SchemaGAN.py  run_game.py  sensitivity_analyis.py  setup.cfg  test_q_net.py  train_model.py  validate_model.py  validation.py
.github/workflows/: tests.yml
CPTSuperLearn/: agent.py  environment.py  interpolator.py  metric.py  runner.py  utils.py  utils_SchemaGAN.py
data/: slice.txt
game/: cpt_game.py
test/: test_drf.py
test/data/: cpt_score_id.txt  cpt_score_sg.txt
test/data/train/: cs_0.csv  cs_1.csv  cs_10.csv  cs_3.csv  cs_5.csv  cs_9.csv
visual_paper/: neural_net_graph.py  plot_enviroment.py
