[metadata]
name = CPTsuperlearn
version = 1.0
author = Bruno Zuada Coelho, Eleni Smyrniou
author_email = bruno.zuadacoelho@deltares.nl, eleni.smyrniou@deltares.nl
description = Deep Reinforcement Learning for insitu testing
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3
    Operating System :: OS Independent

[options]
packages = CPTSuperLearn
include_package_data = True
install_requires =
    matplotlib==3.9.2
    numpy==2.1.3
    scipy==1.14.1
    torch==2.5.1
    torchaudio==2.5.1
    torchvision==0.20.1
    tqdm==4.67.0
    tensorflow==2.8.0
    keras==2.8.0
    requests==2.32.3
python_requires = >=3.12

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    tox>=4.11
