[metadata]
name = CPTsuperlearn
version = 1.0
author = Bruno Zuada Coelho, Eleni Smyrniou
author_email = bruno.zuadacoelho@deltares.nl, eleni.smyrniou@deltares.nl
description = Deep Reinforcement Learning for insitu testing
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3
    Operating System :: OS Independent

[options]
packages = CPTSuperLearn
include_package_data = True
install_requires =
    matplotlib==3.10.0
    numpy==1.26.4
    scipy==1.14.1
    torch==2.5.1
    torchaudio==2.5.1
    torchvision==0.20.1
    tqdm==4.67.1
    tensorflow==2.17.0
    keras==3.7.0
    requests==2.32.3
python_requires = >=3.12
