[metadata]
name = CPTsuperlearn
version = 1.0
author = Bruno Zuada Coelho, Eleni Smyrniou
author_email = bruno.zuadacoelho@deltares.nl, eleni.smyrniou@deltares.nl
description = Deep Reinforcement Learning for in-situ testing
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix

[options]
packages = CPTSuperLearn
include_package_data = True
install_requires =
    matplotlib==3.10.0
    numpy==1.23.5
    scipy==1.14.1
    torch==2.5.1
    torchaudio==2.5.1
    torchvision==0.20.1
    tqdm==4.67.1
    tensorflow==2.12.0
    keras==2.12.0
    requests==2.32.3
python_requires = >=3.11, <3.12

[options.extras_require]
testing =
    pytest==8.3.4
    pytest-cov==6.0.0
